SolidityParser.py
# Generated from Solidity.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class SolidityParser ( Parser ):

    grammarFileName = "Solidity.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'pragma'", "';'", "'^'", "'~'", "'>='", 
                     "'>'", "'<'", "'<='", "'='", "'import'", "'{'", "','", 
                     "'}'", "'from'", "'*'", "'as'", "'library'", "'contract'", 
                     "'is'", "'using'", "'for'", "'constructor('", "');'", 
                     "')'", "'mapping'", "'('", "'=>'", "'struct'", "'event'", 
                     "'modifier'", "'function'", "'assert'", "'require'", 
                     "'revert'", "'return'", "'external'", "'public'", "'internal'", 
                     "'private'", "'payable'", "'constant'", "'view'", "'pure'", 
                     "'returns'", "'emit'", "'enum'", "'if'", "'else if'", 
                     "'else'", "'while'", "'do'", "'continue'", "'break'", 
                     "'throw'", "'ether'", "'finney'", "'szabo'", "'wei'", 
                     "'seconds'", "'minutes'", "'hours'", "'days'", "'weeks'", 
                     "'['", "']'", "'++'", "'--'", "'.'", "':'", "'!'", 
                     "'+'", "'-'", "'after'", "'delete'", "'|'", "'&'", 
                     "'&&'", "'||'", "'=='", "'!='", "'|='", "'^='", "'&='", 
                     "'<<'", "'>>'", "'<<='", "'>>='", "'+='", "'-='", "'*='", 
                     "'/='", "'%='", "'**'", "'/'", "'%'", "'?'", "'new'", 
                     "'indexed'", "'address'", "'bool'", "'string'", "'var'", 
                     "'fixed'", "'ufixed'", "'bytes1'", "'bytes2'", "'bytes3'", 
                     "'bytes4'", "'bytes5'", "'bytes6'", "'bytes7'", "'bytes8'", 
                     "'bytes9'", "'bytes10'", "'bytes11'", "'bytes12'", 
                     "'bytes13'", "'bytes14'", "'bytes15'", "'bytes16'", 
                     "'bytes17'", "'bytes18'", "'bytes19'", "'bytes20'", 
                     "'bytes21'", "'bytes22'", "'bytes23'", "'bytes24'", 
                     "'bytes25'", "'bytes26'", "'bytes27'", "'bytes28'", 
                     "'bytes29'", "'bytes30'", "'bytes31'", "'bytes32'", 
                     "'uint'", "'uint8'", "'uint16'", "'uint24'", "'uint32'", 
                     "'uint40'", "'uint48'", "'uint56'", "'uint64'", "'uint72'", 
                     "'uint80'", "'uint88'", "'uint96'", "'uint104'", "'uint112'", 
                     "'uint120'", "'uint128'", "'uint136'", "'uint144'", 
                     "'uint152'", "'uint160'", "'uint168'", "'uint176'", 
                     "'uint184'", "'uint192'", "'uint200'", "'uint208'", 
                     "'uint216'", "'uint224'", "'uint232'", "'uint240'", 
                     "'uint248'", "'uint256'", "'int'", "'int8'", "'int16'", 
                     "'int24'", "'int32'", "'int40'", "'int48'", "'int56'", 
                     "'int64'", "'int72'", "'int80'", "'int88'", "'int96'", 
                     "'int104'", "'int112'", "'int120'", "'int128'", "'int136'", 
                     "'int144'", "'int152'", "'int160'", "'int168'", "'int176'", 
                     "'int184'", "'int192'", "'int200'", "'int208'", "'int216'", 
                     "'int224'", "'int232'", "'int240'", "'int248'", "'int256'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "PragmaVersion", 
                      "StringIdentifier", "QuotedSentence", "NumberIdentifier", 
                      "WS", "COMMENT", "LINE_COMMENT" ]

    RULE_parts = 0
    RULE_pragmaPart = 1
    RULE_pragmaIdentifier = 2
    RULE_pragmaVersionOperator = 3
    RULE_pragmaVersionNumber = 4
    RULE_importPart = 5
    RULE_importOption = 6
    RULE_importAs = 7
    RULE_libraryPart = 8
    RULE_libraryCodeBlock = 9
    RULE_libraryIdentifier = 10
    RULE_contractPart = 11
    RULE_contractIs = 12
    RULE_contractIsIdentifier = 13
    RULE_contractIdentifier = 14
    RULE_contractCodeBlock = 15
    RULE_usingPart = 16
    RULE_usingLibrary = 17
    RULE_forType = 18
    RULE_constructorPart = 19
    RULE_variablePart = 20
    RULE_mappingPart = 21
    RULE_mapping = 22
    RULE_mappingFrom = 23
    RULE_mappingTo = 24
    RULE_structPart = 25
    RULE_structIdentifier = 26
    RULE_structParams = 27
    RULE_eventPart = 28
    RULE_eventIdentifier = 29
    RULE_eventParams = 30
    RULE_functionModifierPart = 31
    RULE_functionPart = 32
    RULE_functionBody = 33
    RULE_statement = 34
    RULE_errorHandlerStatement = 35
    RULE_errorHandlerIdentifier = 36
    RULE_otherStatement = 37
    RULE_functionReturnStatement = 38
    RULE_functionIdentifier = 39
    RULE_functionParams = 40
    RULE_functionType = 41
    RULE_functionPayable = 42
    RULE_functionConstant = 43
    RULE_functionRestriction = 44
    RULE_functionReturns = 45
    RULE_emitStatement = 46
    RULE_emitIdentifier = 47
    RULE_enumPart = 48
    RULE_enumIdentifier = 49
    RULE_enumValues = 50
    RULE_enumValue = 51
    RULE_functionStatement = 52
    RULE_functionStatementIdentifier = 53
    RULE_ifStatement = 54
    RULE_ifStatementBody = 55
    RULE_ifCondition = 56
    RULE_elseIfStatement = 57
    RULE_elseStatement = 58
    RULE_forStatement = 59
    RULE_forStatementBody = 60
    RULE_whileStatement = 61
    RULE_whileStatementBody = 62
    RULE_doWhileStatement = 63
    RULE_doWhileStatementBody = 64
    RULE_continueStatement = 65
    RULE_breakStatement = 66
    RULE_throwStatement = 67
    RULE_etherUnit = 68
    RULE_timeUnit = 69
    RULE_token = 70
    RULE_stateVariable = 71
    RULE_stateVariableKeyword = 72
    RULE_stateVariableType = 73
    RULE_stateVariableIdentifier = 74

    ruleNames =  [ "parts", "pragmaPart", "pragmaIdentifier", "pragmaVersionOperator", 
                   "pragmaVersionNumber", "importPart", "importOption", 
                   "importAs", "libraryPart", "libraryCodeBlock", "libraryIdentifier", 
                   "contractPart", "contractIs", "contractIsIdentifier", 
                   "contractIdentifier", "contractCodeBlock", "usingPart", 
                   "usingLibrary", "forType", "constructorPart", "variablePart", 
                   "mappingPart", "mapping", "mappingFrom", "mappingTo", 
                   "structPart", "structIdentifier", "structParams", "eventPart", 
                   "eventIdentifier", "eventParams", "functionModifierPart", 
                   "functionPart", "functionBody", "statement", "errorHandlerStatement", 
                   "errorHandlerIdentifier", "otherStatement", "functionReturnStatement", 
                   "functionIdentifier", "functionParams", "functionType", 
                   "functionPayable", "functionConstant", "functionRestriction", 
                   "functionReturns", "emitStatement", "emitIdentifier", 
                   "enumPart", "enumIdentifier", "enumValues", "enumValue", 
                   "functionStatement", "functionStatementIdentifier", "ifStatement", 
                   "ifStatementBody", "ifCondition", "elseIfStatement", 
                   "elseStatement", "forStatement", "forStatementBody", 
                   "whileStatement", "whileStatementBody", "doWhileStatement", 
                   "doWhileStatementBody", "continueStatement", "breakStatement", 
                   "throwStatement", "etherUnit", "timeUnit", "token", "stateVariable", 
                   "stateVariableKeyword", "stateVariableType", "stateVariableIdentifier" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    T__65=66
    T__66=67
    T__67=68
    T__68=69
    T__69=70
    T__70=71
    T__71=72
    T__72=73
    T__73=74
    T__74=75
    T__75=76
    T__76=77
    T__77=78
    T__78=79
    T__79=80
    T__80=81
    T__81=82
    T__82=83
    T__83=84
    T__84=85
    T__85=86
    T__86=87
    T__87=88
    T__88=89
    T__89=90
    T__90=91
    T__91=92
    T__92=93
    T__93=94
    T__94=95
    T__95=96
    T__96=97
    T__97=98
    T__98=99
    T__99=100
    T__100=101
    T__101=102
    T__102=103
    T__103=104
    T__104=105
    T__105=106
    T__106=107
    T__107=108
    T__108=109
    T__109=110
    T__110=111
    T__111=112
    T__112=113
    T__113=114
    T__114=115
    T__115=116
    T__116=117
    T__117=118
    T__118=119
    T__119=120
    T__120=121
    T__121=122
    T__122=123
    T__123=124
    T__124=125
    T__125=126
    T__126=127
    T__127=128
    T__128=129
    T__129=130
    T__130=131
    T__131=132
    T__132=133
    T__133=134
    T__134=135
    T__135=136
    T__136=137
    T__137=138
    T__138=139
    T__139=140
    T__140=141
    T__141=142
    T__142=143
    T__143=144
    T__144=145
    T__145=146
    T__146=147
    T__147=148
    T__148=149
    T__149=150
    T__150=151
    T__151=152
    T__152=153
    T__153=154
    T__154=155
    T__155=156
    T__156=157
    T__157=158
    T__158=159
    T__159=160
    T__160=161
    T__161=162
    T__162=163
    T__163=164
    T__164=165
    T__165=166
    T__166=167
    T__167=168
    T__168=169
    T__169=170
    T__170=171
    T__171=172
    T__172=173
    T__173=174
    T__174=175
    T__175=176
    T__176=177
    T__177=178
    T__178=179
    T__179=180
    T__180=181
    T__181=182
    T__182=183
    T__183=184
    T__184=185
    T__185=186
    T__186=187
    T__187=188
    T__188=189
    T__189=190
    T__190=191
    T__191=192
    T__192=193
    T__193=194
    T__194=195
    T__195=196
    T__196=197
    T__197=198
    T__198=199
    T__199=200
    T__200=201
    T__201=202
    PragmaVersion=203
    StringIdentifier=204
    QuotedSentence=205
    NumberIdentifier=206
    WS=207
    COMMENT=208
    LINE_COMMENT=209

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class PartsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(SolidityParser.EOF, 0)

        def pragmaPart(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SolidityParser.PragmaPartContext)
            else:
                return self.getTypedRuleContext(SolidityParser.PragmaPartContext,i)


        def contractPart(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SolidityParser.ContractPartContext)
            else:
                return self.getTypedRuleContext(SolidityParser.ContractPartContext,i)


        def libraryPart(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SolidityParser.LibraryPartContext)
            else:
                return self.getTypedRuleContext(SolidityParser.LibraryPartContext,i)


        def importPart(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SolidityParser.ImportPartContext)
            else:
                return self.getTypedRuleContext(SolidityParser.ImportPartContext,i)


        def getRuleIndex(self):
            return SolidityParser.RULE_parts

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParts" ):
                listener.enterParts(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParts" ):
                listener.exitParts(self)




    def parts(self):

        localctx = SolidityParser.PartsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_parts)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SolidityParser.T__0) | (1 << SolidityParser.T__9) | (1 << SolidityParser.T__16) | (1 << SolidityParser.T__17))) != 0):
                self.state = 154
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [SolidityParser.T__0]:
                    self.state = 150
                    self.pragmaPart()
                    pass
                elif token in [SolidityParser.T__17]:
                    self.state = 151
                    self.contractPart()
                    pass
                elif token in [SolidityParser.T__16]:
                    self.state = 152
                    self.libraryPart()
                    pass
                elif token in [SolidityParser.T__9]:
                    self.state = 153
                    self.importPart()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 158
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 159
            self.match(SolidityParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PragmaPartContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pragmaIdentifier(self):
            return self.getTypedRuleContext(SolidityParser.PragmaIdentifierContext,0)


        def pragmaVersionNumber(self):
            return self.getTypedRuleContext(SolidityParser.PragmaVersionNumberContext,0)


        def pragmaVersionOperator(self):
            return self.getTypedRuleContext(SolidityParser.PragmaVersionOperatorContext,0)


        def getRuleIndex(self):
            return SolidityParser.RULE_pragmaPart

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPragmaPart" ):
                listener.enterPragmaPart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPragmaPart" ):
                listener.exitPragmaPart(self)




    def pragmaPart(self):

        localctx = SolidityParser.PragmaPartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_pragmaPart)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self.match(SolidityParser.T__0)
            self.state = 162
            self.pragmaIdentifier()
            self.state = 164
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SolidityParser.T__2) | (1 << SolidityParser.T__3) | (1 << SolidityParser.T__4) | (1 << SolidityParser.T__5) | (1 << SolidityParser.T__6) | (1 << SolidityParser.T__7) | (1 << SolidityParser.T__8))) != 0):
                self.state = 163
                self.pragmaVersionOperator()


            self.state = 166
            self.pragmaVersionNumber()
            self.state = 167
            self.match(SolidityParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PragmaIdentifierContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def StringIdentifier(self):
            return self.getToken(SolidityParser.StringIdentifier, 0)

        def getRuleIndex(self):
            return SolidityParser.RULE_pragmaIdentifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPragmaIdentifier" ):
                listener.enterPragmaIdentifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPragmaIdentifier" ):
                listener.exitPragmaIdentifier(self)




    def pragmaIdentifier(self):

        localctx = SolidityParser.PragmaIdentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_pragmaIdentifier)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self.match(SolidityParser.StringIdentifier)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PragmaVersionOperatorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SolidityParser.RULE_pragmaVersionOperator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPragmaVersionOperator" ):
                listener.enterPragmaVersionOperator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPragmaVersionOperator" ):
                listener.exitPragmaVersionOperator(self)




    def pragmaVersionOperator(self):

        localctx = SolidityParser.PragmaVersionOperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_pragmaVersionOperator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SolidityParser.T__2) | (1 << SolidityParser.T__3) | (1 << SolidityParser.T__4) | (1 << SolidityParser.T__5) | (1 << SolidityParser.T__6) | (1 << SolidityParser.T__7) | (1 << SolidityParser.T__8))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PragmaVersionNumberContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PragmaVersion(self):
            return self.getToken(SolidityParser.PragmaVersion, 0)

        def getRuleIndex(self):
            return SolidityParser.RULE_pragmaVersionNumber

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPragmaVersionNumber" ):
                listener.enterPragmaVersionNumber(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPragmaVersionNumber" ):
                listener.exitPragmaVersionNumber(self)




    def pragmaVersionNumber(self):

        localctx = SolidityParser.PragmaVersionNumberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_pragmaVersionNumber)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            self.match(SolidityParser.PragmaVersion)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportPartContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def importOption(self):
            return self.getTypedRuleContext(SolidityParser.ImportOptionContext,0)


        def getRuleIndex(self):
            return SolidityParser.RULE_importPart

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImportPart" ):
                listener.enterImportPart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImportPart" ):
                listener.exitImportPart(self)




    def importPart(self):

        localctx = SolidityParser.ImportPartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_importPart)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 175
            self.match(SolidityParser.T__9)
            self.state = 176
            self.importOption()
            self.state = 177
            self.match(SolidityParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportOptionContext(ParserRuleContext):
